# MLZoomcamp2025

./: .gitignore  HW1.ipynb  HW2.ipynb  HW3.ipynb  HW4.ipynb  HW4.md  HW6.ipynb  README.md  hw6.md  part3.py
.ipynb_checkpoints/: HW3-checkpoint.ipynb
Capstone Project 1/: .dockerignore  Dockerfile  README.md  instruction.md  predict.py  railway.json  requirements.txt  start.sh  train.py
Capstone Project 1/data/: .gitkeep  README.md
Capstone Project 1/models/: classifier_IE.pkl  classifier_JP.pkl  classifier_NS.pkl  classifier_TF.pkl  metadata.json
Capstone Project 1/notebooks/: .gitkeep  notebook.ipynb
Capstone Project 1/src/: __init__.py  classifier.py  feature_extractor.py  preprocessor.py  utils.py
Capstone Project 1/tests/: __init__.py  test_api.py  test_feature_extractor.py  test_preprocessor.py  test_utils.py
HW6/: HW6.ipynb  HW6.md
HW7/: HW7.ipynb
hw10/: hw10.ipynb  load_test.py  q6_test.py
hw5/: Dockerfile  HW5_solution_steps.md  predict.py  pyproject.toml  service.py
hw5/src/hw5/: __init__.py
