[project]
name = "hw5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "vloyer@usc.edu" }
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.120.1",
    "requests>=2.32.5",
    "scikit-learn==1.6.1",
    "uvicorn>=0.38.0",
]

[project.scripts]
hw5 = "hw5:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
